Add Gradle `javafx` plugin to ensure all necessary JFX .jar files are added to the classpath and generated output .jar/.war/.zip/.tar.gz archives